feat(database): 添加疫苗预约系统初始数据并配置静态资源访问
- 在data.sql中添加用户、疫苗、预约和接种记录的初始数据
- 为新插入的数据添加重复键处理逻辑
- 配置BCrypt密码哈希用于新增用户账户
- 更新SecurityConfig允许静态资源配置访问
- 添加对HTML、CSS、JS和图片资源的公共访问权限
- 为Swagger API文档和上传文件路径保留公共访问权限

Signed-off-by: Eternity <186853152+AbsoluteZero001@users.noreply.github.com>